# solana-crowdfund-dapp-pda

./: Anchor.toml  README.md
app/: .gitignore  package.json
app/src/: App.js  idl.json
my-solana-wallet/: wallet.json
programs/solana-crowdfund-dapp-pda/: Cargo.toml
programs/solana-crowdfund-dapp-pda/src/: deposit.ts  lib.rs
tests/: solana-crowdfund-dapp-pda.ts
